--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
                     80h480v80H280q-45 0-68-39.5t-2-78.5l54-98-144-304H40v-80h130l38 
                     80Zm134 280h280-280Z" />
                 </svg>
+                <span id="cart-count2" class="cart-badge">0</span>
             </span>
             <span class="link-title">Cart</span>
         </label>
@@ -1345,7 +1346,7 @@
 
     <div id="cart-container">
         <div class="cart" id="cart">
-            <h3>Cart (<span id="cart-count">0</span>)</h3>
+            <h3>Cart (<span  id="cart-count">0</span>)</h3>
 
             <ul id="cart-items"></ul>
 
